# backend-api

./: .mise.toml  pyproject.toml  requirements.dev.txt  requirements.prod.txt
app/: config.py  main.py
app/api/v1/: auth.py
app/database/: get_db.py
app/models/: customer.py
app/schemas/: auth.py
app/services/: auth.py
docker/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
